--- a/tocbzwithresize/Cargo.toml
+++ b/tocbzwithresize/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+image = "0.25.1"
 indicatif = { version = "0.17.8", features = ["rayon"] }
 libtocbz = { path = "../libtocbz" }
 rayon = "1.7"
