--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["libtocbz", "tocbz", "tocbzwithresize"]
+members = ["libtocbz", "renban_rename", "tocbz", "tocbzwithresize"]
 resolver = "2"
